# StreamDeck-Tools

./: Cargo.toml
src/: main.rs  mcp_client.rs  profiles.rs  stream_deck_app.rs
