[package]
name = "streamdeck_tools"
version = "0.1.0"
edition = "2024"
description = "Interact with the streamdeck in ways they didn't intend"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["v4"] }
